# bore

./: .gitignore  AGENTS.md  AGENTS.md.bak  ANALISI_TRANSFER.md  CARRIER_TUNING.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COPILOT_ANALISYS.md  Cargo.toml  Dockerfile  Dockerfile.client  FIREWALL_LIMITATION.md  INSTALL_BORE.md  Justfile  LIVE_BORE.md  NAT_TRAVERSAL.md  README.md  SERVER_UDP_OPTIMIZATION.md  TEST_UDP.md  TRANSFER_FEASIBILITY.md  TRANSFER_TODO.md  UPSTREAM_CHANGES.md  USER_GUIDE.md  VHOST_PLAN_UDP.md  build.rs  install-bore.sh  justfile  package.json  test_gates.sh
.github/workflows/: ci.yml  continuous_raw_builds.yml  docker.yml  e2e_netns.yml  latest.yml  mean_bean_ci.yml  mean_bean_deploy.yml
ci/: test.bash  version.bash
docker/: Dockerfile.android  Dockerfile.cross  config-full.example.yml  config.yml  docker-compose-full-yml.yml  docker-compose.client.yml  docker-compose.secret-proxy.yml  docker-compose.server.prod.yml  docker-compose.server.yml
docs/: ADAPTIVE_NAT.md  BORE_DERP_ANALYSIS.md  CHANGELOG.md  DOWNLOAD_URLS.md  FRP_BORE_FULL_COMPARISON.md  LOCAL_PROXY_TESTUDP_AUDIT.md  RELAY_PERF_PLAN.md  SECRET_HARDENING_ASSESSMENT.md  TRANSFER_AUDIT.md  TRANSFER_FEASIBILITY.md  TRANSFER_TEST_MATRIX.md  TRANSFER_UPGRADE_PLAN.md  VHOST.md  VHOST_AUDIT.md  VHOST_PLAN.md  VHOST_TEST_MATRIX.md  VHOST_UDP_CONCURRENCY_FIX.md  VPN.md  VPN_FULL_PLAN_TODO.md  VPN_FULL_PLAN_V1.md  WEBSERVER_LOG_PLAN.md
docs/frontend/: ADMIN_DASHBOARD.md  ADMIN_DASHBOARD_ASSESSMENT.md  ADMIN_DASHBOARD_BUGFIX2_PLAN.md  ADMIN_DASHBOARD_BUGFIX_PLAN.md  ADMIN_DASHBOARD_PLAN.md  ADMIN_FLAG_PARITY_PLAN.md  ADMIN_SECTIONS.md  ADMIN_VHOST_PARITY_PLAN.md  ARCHITECTURE_ADMIN_UI.md
docs/local/: LOCAL_PROXY_ASSESSMENT.md  LOCAL_PROXY_TESTUDP_AUDIT.md  LOCAL_UDP_PLAN.md
docs/nat/: PLAN_MANUAL_UDP_CANDIDATES.md
docs/performance/: CARRIER_TUNING.md
docs/plans/: ADMIN_UI_POLLING_ILLEGAL_INVOCATION_FIX_PLAN.md  STALE_SECRET_ENTRIES_FIX_PLAN.md  UDP_DIRECT_PATH_FLAP_PLAN.md  secret_tunnel_hardening_PLAN.md
docs/plans/udp_flap/: EVIDENCE.md  udp_reuse_probe.py
docs/transfer/: TRANSFER_TEST_MATRIX.md
docs/vhost/: VHOST_HARDENING_PLAN.md
docs/vpn/: CONCURRENT_TUNNEL_STABILITY_ASSESSMENT.md  VPN.md  VPN_BANDWIDTH_ASSESSMENT.md  VPN_BUGHUNT_ASSESSMENT.md  VPN_BUGHUNT_TODO.md  VPN_FORWARD_ACCEPT.md  VPN_FULL_PLAN_TODO.md  VPN_FULL_PLAN_V2.md  VPN_HARDENING_PLAN.md  VPN_MACOS.md  VPN_MACOS_PORT_PLAN.md  VPN_MULTI_CLIENT.md  VPN_NAT_ASSESSMENT.md  VPN_NAT_PLAN.md  VPN_PHASE_2_STATUS.md  VPN_TEST_MATRIX.md  VPN_TUN_AUTONAME_PLAN.md  VPN_USER_FULL_GUIDE.md
scripts/: admin_dashboard_test.sh  local_bench.sh  local_proxy_netns_test.sh  secret_netns_test.sh  vhost_bench.sh  vhost_cleanup.sh  vhost_debug.sh  vhost_netns_test.sh  vhost_netns_test_hard.sh  vhost_udp_concurrency_repro.sh  vpn_bench.sh  vpn_debug.sh  vpn_netns_test.sh  vpn_netns_test_hard.sh
scripts/dev/: bore-vhost-sudoers  bore-vpn-sudoers
src/: adaptive_nat.rs  admin.rs  admin_api.rs  admin_http.rs  admin_status.html  admin_views.rs  auth.rs  basicauth.rs  certinfo.rs  client.rs  edge.rs  holepunch.rs  lib.rs  main.rs  mux.rs  pool.rs  prefixed.rs  reconnect.rs  secret.rs  server.rs  shared.rs  transfer.rs  transfer_v2.rs  transport.rs  udp_diagnostic.rs  vhost.rs  vpn.rs  vpn_server.rs  weblog.rs
src/admin_ui/: api.js  app.js  index.html  modal.js  poller.js  registry.js  router.js  store.js  style.css  ui.js
src/admin_ui/panels/: certs.js  config.js  metrics.js  overview.js  secret.js  tunnels.js  vhost.js  vpn.js
test/admin_ui/: app-polling.test.js  badges.test.js  config.test.js  detail.test.js  dom-stub.js  flag-coverage.test.js  metrics-rate.test.js  modal.test.js  notes.test.js  overview.test.js  poller.test.js  secret-carrier-dedup.test.js  secret-detail.test.js  secret-group.test.js  smoke.test.js  table-labels.test.js  vhost-lean.test.js  vhost-parity.test.js  vpn-render.test.js
tests/: admin_test.rs  basic_auth_test.rs  carrier_test.rs  control_port_test.rs  e2e_test.rs  local_proxy_hardening_test.rs  mux_test.rs  public_udp_test.rs  reconnect_test.rs  secret_pool_test.rs  secret_test.rs  tls_test.rs  transfer_stdin_cli_test.rs  transfer_test.rs  udp_test.rs  vhost_test.rs  vpn_relay_link_test.rs  vpn_server_test.rs  websocket_test.rs
tests/fixtures/: test_cert.pem  test_cert_expired.pem
tests/support/: websocket.rs
utils/: check-reflexive-ports.py  live-bore.sh
