[package]
name = "bore-cli"
version = "0.6.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
license = "MIT"
description = "A modern, simple TCP tunnel in Rust that exposes local ports to a remote server, bypassing standard NAT connection firewalls."
repository = "https://github.com/ekzhang/bore"
documentation = "https://docs.rs/bore-cli"
keywords = ["network", "cli", "tunnel", "tcp"]
categories = ["network-programming", "web-programming", "command-line-utilities"]
readme = "README.md"
edition = "2021"

[[bin]]
name = "bore"
path = "src/main.rs"

[features]
default = ["udp"]
# Direct peer-to-peer secret tunnels via UDP hole-punching + STUN, carried over
# QUIC, with automatic fallback to the server relay. On by default; pulls `quinn`
# (and `quinn-udp`). Build with `--no-default-features` to drop it (e.g. for a
# target where `quinn` does not compile).
udp = ["dep:quinn", "dep:rcgen"]

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
clap = { version = "4.5.0", features = ["derive", "env"] }
dashmap = "5.2.0"
fastrand = "2"
futures-util = { version = "0.3.21", features = ["sink"] }
hex = "0.4.3"
hmac = "0.12.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha2 = "0.10.2"
socket2 = "0.6.4"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "io-util", "macros", "net", "sync", "time"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12", "logging"] }
tokio-util = { version = "0.7.1", features = ["codec", "compat"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.18"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
webpki-roots = "1.0.7"
yamux = "0.13.10"

# Optional, enabled by the `udp` feature (see [features]).
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"], optional = true }
rcgen = { version = "0.14.8", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
rcgen = "0.14.8"
rstest = "0.15.0"
tokio = { version = "1.41.0", features = ["sync"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
