[package]
name = "bore-cli"
version = "1.0.0"
authors = [
    "Fabio Pierri <fabio.pierri@synclab.it>",
    "Eric Zhang <ekzhang1@gmail.com> (original bore)",
]
license = "MIT"
description = "A modern, simple TCP tunnel in Rust that exposes local ports to a remote server, bypassing standard NAT connection firewalls. Fork adding UDP hole-punching (QUIC), secret tunnels, and NAT diagnostics."
repository = "https://github.com/manprint/bore"
keywords = ["network", "cli", "tunnel", "tcp"]
categories = ["network-programming", "web-programming", "command-line-utilities"]
readme = "README.md"
edition = "2021"

[[bin]]
name = "bore"
path = "src/main.rs"

[features]
default = ["udp"]
# Direct peer-to-peer secret tunnels via UDP hole-punching + STUN, carried over
# QUIC, with automatic fallback to the server relay. On by default; pulls `quinn`
# (and `quinn-udp`). Build with `--no-default-features` to drop it (e.g. for a
# target where `quinn` does not compile).
udp = ["dep:quinn", "dep:rcgen", "dep:igd-next"]

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
clap = { version = "4.5.0", features = ["derive", "env"] }
dashmap = "5.2.0"
fastrand = "2"
futures-util = { version = "0.3.21", features = ["sink"] }
hex = "0.4.3"
hmac = "0.12.1"
# CSPRNG for the direct-path session nonce and STUN transaction id. `ring` is
# already compiled (tokio-rustls/quinn ring provider), so this adds no build cost.
ring = "0.17"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha2 = "0.10.2"
socket2 = "0.6.4"
blake3 = "1.5.5"
tokio = { version = "1.41.0", features = ["fs", "rt-multi-thread", "io-std", "io-util", "macros", "net", "signal", "sync", "time"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12", "logging"] }
tokio-util = { version = "0.7.1", features = ["codec", "compat"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.2.1", features = ["serde", "v4"] }
webpki-roots = "1.0.7"
yamux = "0.13.10"

# Optional, enabled by the `udp` feature (see [features]). These must stay in the
# top-level dependency set so `--all-features` keeps working on Windows too.
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"], optional = true }
rcgen = { version = "0.14.8", optional = true }
igd-next = { version = "0.16", default-features = false, features = ["aio_tokio"], optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["fs"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18"

[dev-dependencies]
lazy_static = "1.4.0"
rcgen = "0.14.8"
rstest = "0.15.0"
tokio = { version = "1.41.0", features = ["sync"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
